--- a/src/features/Map/MapCanvas.module.css
+++ b/src/features/Map/MapCanvas.module.css
@@ -5,5 +5,6 @@
   width: 100%;
   height: 100%;
   display: block;
-  background-color: #111; /* A dark background like your original */
+  background-color: #111;
+  cursor: grab;
 }
