--- a/src/features/Navigation/MinimapPanel.module.css
+++ b/src/features/Navigation/MinimapPanel.module.css
@@ -1,8 +1,8 @@
 .minimapPanel {
   position: absolute;
-  bottom: 65px;
-  right: 170px;
-  width: 260px; /* compact */
+  top: 12px;
+  right: 12px;
+  width: auto;
   z-index: 1001;
   display: flex;
   flex-direction: column;
